[metadata]
name = awesome_rasam
version = attr: awesome_rasam.__version__
author = Karthik D
author_email = karthik@1upkd.com
description = A Beautiful Soup 4 wrapper for quickly scraping and cleaning data from the web
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/1upkd/awesome_rasam
project_urls =
    Bug Tracker = https://github.com/1upkd/awesome_rasam/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    beautifulsoup4
    html5lib
    requests
    
[options.packages.find]
where = src
